--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,6 +1,7 @@
 $col-pri: #0084b4;
 $col-background: #ffffff;
 $col-border: #e1e8ed;
+$col-button-border: #ffffff;
 $col-text-pri: #292f33;
 $col-text-sec: #8899a6;
 
