--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Tim Ings <timothyjings@gmail.com>">
 
-    <link rel="shortcut icon" type="image/ong" href="{% static "favicon.ico" %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static "favicon.ico" %}"/>
 
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
