--- a/static/templates/profile-base.html
+++ b/static/templates/profile-base.html
@@ -92,6 +92,9 @@
             <div class="row">
                 {% include 'card-trends.html' %}
             </div>
+            <div class="row">
+                {% include 'card-site-info.html' %}
+            </div>
         </div>
     </div>
 {% endblock %}
