--- a/static/scss/_post.scss
+++ b/static/scss/_post.scss
@@ -60,8 +60,9 @@
         color: $col-text-sec;
         font-size: 14px;
     }
+}
 
-    .button {
+.post-action-button {
         display: inline;
         border: none;
         background-color: transparent;
@@ -70,8 +71,18 @@
         width: 30px;
         height: 30px;
         color: $col-text-sec;
+
+        &:hover {
+            display: inline;
+            border: none;
+            background-color: transparent;
+            padding: 0;
+            margin: 0 20px 0 20px;
+            width: 30px;
+            height: 30px;
+            color: $col-text-sec;
+        }
     }
-}
 
 .rounded-top {
     border-top-left-radius: 5px;
